WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84579
[BlackBerry] Authenticated proxy isn't working.
https://bugs.webkit.org/show_bug.cgi?id=84579
Summary
[BlackBerry] Authenticated proxy isn't working.
Jason Liu
Reported
2012-04-23 02:33:21 PDT
steps to reproduce: 1. connect to WiFi network with Internet access only via proxy server (used qaproxy network in QNX-Ottawa WiFi test network) 2. Enable HTTP Proxy & configure proxy credentials under WiFi advanced configuration (proxy IP, port, username & password) 3. attempt to access www.google.com, a dialog box requesting proxy username & password will be shown expected results: website should be loaded successfully without prompting for proxy credentials reproducibility: 100%
Attachments
Patch
(4.43 KB, patch)
2012-04-23 19:26 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Patch
(3.59 KB, patch)
2012-04-24 20:38 PDT
,
Jason Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jason Liu
Comment 1
2012-04-23 19:26:47 PDT
Created
attachment 138488
[details]
Patch
Joe Mason
Comment 2
2012-04-24 07:22:01 PDT
This is going to conflict with the patch I'm reverting from
bug 80135
. That revert may well fix authenticated proxy. Please don't commit it.
Jason Liu
Comment 3
2012-04-24 20:29:19 PDT
(In reply to
comment #2
)
> This is going to conflict with the patch I'm reverting from
bug 80135
. That revert may well fix authenticated proxy. Please don't commit it.
The revert can't fix this problem. It is really a bug. So I make a patch based on the newest codes.
Jason Liu
Comment 4
2012-04-24 20:38:27 PDT
Created
attachment 138731
[details]
Patch
Joe Mason
Comment 5
2012-04-25 06:59:55 PDT
Looks good to me.
WebKit Review Bot
Comment 6
2012-04-25 21:02:42 PDT
Comment on
attachment 138731
[details]
Patch Clearing flags on attachment: 138731 Committed
r115284
: <
http://trac.webkit.org/changeset/115284
>
WebKit Review Bot
Comment 7
2012-04-25 21:02:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug