[BlackBerry] Authenticated proxy isn't working. https://bugs.webkit.org/show_bug.cgi?id=84579

Patch by Jason Liu <jason.liu@torchmobile.com.cn> on 2012-04-25
Reviewed by Antonio Gomes.

We should try to get username and password from WiFi advanced configuration first
when 407 is received.

No new tests. This is covered by existing http tests when proxy's username and password
are configured for WiFi.

* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::sendRequestWithCredentials):

Canonical link: https://commits.webkit.org/102433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115284 268f45cc-cd09-0410-ab3c-d52691b4dbfc